<resources>
    <string name="app_name">F1 Launch</string>
    <string name="settings_name">Settings</string>
    <string name="description">Tap the button as soon as the traffic light turns off to start as fast as possible.</string>
    <string name="single_player">Start</string>
    <string name="settings">Settings</string>
    <string name="race">Race</string>
    <string name="darkmode">Darkmode</string>
    <string name="lightmode">Lightmode</string>
    <string name="back">Back</string>
    <string name="reset">Reset</string>
</resources>