<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_act"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text"
    android:orientation="vertical"
    android:paddingTop="40dip"
    android:paddingBottom="40dip"
    android:paddingLeft="60dip"
    android:paddingRight="60dip"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20px"
            android:layout_marginBottom="62dip"
            android:text="@string/app_name"
            android:textColor="@color/background"
            android:textSize="40sp" />


    </LinearLayout>


    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="62dip"
        android:text="@string/description"
        android:textColor="@color/background"
        android:textSize="20sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/single_player"
        android:layout_width="240dip"
        android:layout_height="80dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dip"
        android:backgroundTint="@color/buttonBackground"
        android:text="@string/single_player"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:cornerRadius="40dip"
        app:icon="@mipmap/finish_flag"
        app:tint="@color/text"
        app:iconPadding="0dip"
        app:iconSize="32dip"
        app:iconTint="#FFFFFF"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        android:layout_width="240dip"
        android:layout_height="80dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="62dip"
        android:backgroundTint="@color/buttonBackground"
        android:text="@string/settings"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:cornerRadius="40dip"
        app:icon="@mipmap/settings"
        app:tint="@color/text"
        app:iconPadding="0dip"
        app:iconSize="32dip"
        app:iconTint="#FFFFFF"/>


</LinearLayout>